--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.3.0",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.18",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
